--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Create an article</h1>
+<h1>Editing existing article.</h1>
+
 
 <% if @article.errors.any? %>
 <h2>Oops! The following errors prevented the article from being created.</h2>
